--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
+        @media (max-width: 1200px) {
+            body {
+                background-image: url('images/Background.png');
+                background-repeat: no-repeat;
+                background-size: auto;
+            }
+        }
     </style>
 </head>
 
@@ -54,35 +62,7 @@
             <div class="row">
                 <div class="col-md-11"></div>
                 <div class="col-md-1">
-                    <div class="social float-right">
-                        <ul class="list-unstyled">
-                            <li class="py-2">
-                                <a href="https://music.apple.com/us/artist/vetr/1456667173" target="_blank">
-                                    <img width="20px" src="images/iTunes.png" alt="">
-                                </a>
-                            </li>
-                            <li class="py-2">
-                                <a href="https://open.spotify.com/artist/3OcSvvEkZToGZ2PU2awKxm?si=JK6nXlgOQsSNmK1tZLeczA" target="_blank">
-                                    <img width="20px" src="images/Sptify.png" alt="">
-                                </a>
-                            </li>
-                            <li class="py-2">
-                                <a href="https://www.youtube.com/channel/UCRyQssp0O63Y8dc79LIjV8g?view_as=subscriber" target="_blank">
-                                    <img width="20px" src="images/YouTube.png" alt="">
-                                </a>
-                            </li>
-                            <li class="py-2">
-                                <a href="http://instagram.com/vetrmusic" target="_blank">
-                                    <img width="20px" src="images/Instagram.png" alt="">
-                                </a>
-                            </li>
-                            <li class="py-2">
-                                <a href="http://soundcloud.com/vetr" target="_blank">
-                                    <img width="20px" src="images/SoundCloud.png" alt="">
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+
                 </div>
 
             </div>
