--- a/lyric.html
+++ b/lyric.html
@@ -124,6 +124,21 @@
                         </a>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 mb-4 card-transparent text-white" style="background-color: #000000;">
+                    <img class="card-img" src="images/Cover_Lyric4.png" alt="Card image">
+                    <div class="card-img-overlay ">
+                        <h3 class="card-title pb-5 mt-5 pt-5">My Three-Year-Old Hero</h3>
+                        <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
+                        <p class="pt-5">Choose a language</p>
+                        <p>to see lyric of the music:</p>
+                        <a class="pr-5" href="  " target="_blank">Eng
+                        </a>
+                        <a class="pr-5" href="" target="_blank">العربیه
+                        </a>
+                        <a href="" target="_blank">Farsi
+                        </a>
+                    </div>
+                </div>
             </div>
 
         </div>
