--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="container">
         <div class="header text-center pt-4">
             <img src="images/vetr_logo.png" width="120px" class="" alt="">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-none">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <i class="fa fa-menu" style="color: red !important;"></i>
                 </button>
-                <div class="collapse navbar-collapse pt-md-1" id="navbarText">
+                <div class="collapse navbar-collapse pt-md-1" id="navbarText"  style="background-color: gray;">
                     <ul class="navbar-nav mt-1 mx-auto">
                         <li class="nav-item px-3">
                             <a class="nav-link active" href="index.html">HOME</a>
@@ -70,6 +70,8 @@
 
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
